# cheers

./: .gitmodules  .ignore  .taplo.toml  .typos.toml  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE.md  README.md  biome.json  deny.toml  flake.nix  package.json  release-plz.toml  result  rustfmt.toml
bundlestar/: Cargo.toml  build.rs
bundlestar/src/: analyzer.rs  lib.rs  plugins.rs  swc.rs
bundlestar/src/analyze/: mod.rs  parse.rs
cheers/: Cargo.toml
cheers_macros/: Cargo.toml
cheers_macros/src/: action.rs  component.rs  lib.rs  shared.rs
cheers_macros/src/component/: form.rs
crabstar/: Cargo.toml  askama.toml
crabstar/src/: bundler.rs  css_bundler.rs  datastar_bundler.rs  de.rs  fragment.rs  helpers.rs  js_script.rs  lib.rs  router.rs  suspense.rs
crabstar/src/events/: js_script.rs  mod.rs  patch_elements.rs
crabstar/src/fragment/: mod.rs  suspense.rs
crabstar/src/page/: mod.rs  suspense.rs
crabstar/src/router/: assets_router.rs  bundler.rs  mod.rs  redirect_trailing_slash.rs  static_server.rs
crabstar/src/router/live_reload/: mod.rs  script.html
crabstar/src/signal/: mod.rs
crabstar/tests/: mod.rs
crabstar/tests/assets/templates/: base.html  child.html  home.html  nested-post.html  post.html  status.html
crabstar/tests/fragment/signals/: de_null.rs  lifetimes.rs  mod.rs  nested.rs
crabstar/tests/fragment/suspense/: render_order.rs
crabstar/tests/js_script/: mod.rs
crabstar/tests/page/: lifetimes.rs  mod.rs
crabstar/tests/page/signals/: de_null.rs  mod.rs  nested.rs
crabstar/tests/page/suspense/: mod.rs  render_order.rs
crabstar/tests/patch_elements/: mod.rs
crabstar/tests/signals/: de_null.rs  id.rs  lifetimes.rs  mod.rs  nested.rs  object.rs
crabstar/tests/suspense/: mod.rs
crabstar/tests/templates/: nested_post.html
crabstar_macros/: Cargo.toml
crabstar_macros/src/: askama_config.rs  complete.rs  helpers.rs  lib.rs  named_field.rs  shared.rs
crabstar_macros/src/crabstar/: args.rs  dependency_template.rs  fields.rs  mod.rs  params.rs  shared.rs  supported_field_attributes.rs
crabstar_macros/src/crabstar/page/: into_response_impl.rs  mod.rs
crabstar_macros/src/crabstar/scripts/: mod.rs  streaming-ssr-script.html
crabstar_macros/src/crabstar/signal/: into_response_impl.rs  methods.rs  mod.rs  struct_decl.rs
crabstar_macros/src/crabstar/source/: mod.rs
crabstar_macros/src/crabstar/suspense/: mod.rs
crabstar_macros/src/fragment/: mod.rs  named_field.rs  signals.rs
crabstar_macros/src/page/: datastar.rs  mod.rs  named_field.rs  opts.rs  params.rs  signals.rs
crabstar_macros/src/page/templates/: live-reload-script.html  mod.rs  root.rs  streaming-ssr-script.html
crabstar_macros/src/signal/: mod.rs  opts.rs
crabstar_macros/src/suspense/: hydration-script.html  mod.rs  params.rs
crates/ast/: Cargo.toml  NOTICE.md
crates/ast/src/: basics.rs  component.rs  control.rs  generate.rs  lib.rs  syntax.rs
crates/bundle/: Cargo.toml  build.rs
crates/bundle/src/: lib.rs
crates/cargo-cheers/: Cargo.toml
crates/cargo-cheers/LICENSES/: maudfmt-MIT.txt
crates/cargo-cheers/src/: fmt.rs  format.rs  line_length.rs  main.rs  subsecond.rs  testing.rs  trivia.rs
crates/cargo-cheers/src/print/: attribute_value_node.rs  component.rs  control_block.rs  element.rs
crates/cargo-cheers/tests/: cli.rs  rustfmt_arg.rs
crates/cargo-cheers/tests/shared/: mod.rs
crates/cheers/: Cargo.toml  NOTICE.md  build.rs
crates/cheers/src/: async_stream.rs  components.rs  context.rs  custom_event.rs  devtools.rs  events.rs  lib.rs  pi_extension.rs  reference.rs  render.rs  response.rs  signal_path.rs  subsecond.rs  test.rs  test_utils.rs  track.rs
crates/cheers/src/events/: js_script.rs  mod.rs  patch_elements.rs  patch_signals.rs
crates/cheers/src/internal/: action_rendering.rs  action_security.rs  assets.rs  async_islands.rs  custom_event.rs  mod.rs  pi_extension.rs  signal_path.rs
crates/cheers/src/router/: assets.rs  compression.rs  hot_reload.rs  live_reload.rs  mod.rs  redirect_trailing_slash.rs  testing.rs
crates/cheers/src/router/assets/: datastar-entry.ts  mod.rs  ssr-stream-subsecond.ts  ssr-stream.ts  track-config.ts  track-plugin.ts  tsconfig.json
crates/cheers/src/validation/: attributes.rs  elements.rs  mathml.rs  mod.rs  svg.rs
crates/cheers/tests/: main.rs  ui.rs
crates/cheers/tests/fixtures/: app.css  app_bundle.js  base.css  page.css
crates/cheers/tests/ui/: big_int_in_js_context.rs  big_int_in_js_context.stderr  datastar_event_does_not_ambiguous_glob_import.rs  invalid_datastar_modifier.rs  invalid_datastar_modifier.stderr  js_script_new_rejects_string.rs  js_script_new_rejects_string.stderr  signal_in_regular_attr.rs  signal_in_regular_attr.stderr  unregistered_datastar_event.rs  unregistered_datastar_event.stderr  unsupported_ref_expr.rs  unsupported_ref_expr.stderr  unsupported_signal_path_segment.rs  unsupported_signal_path_segment.stderr
crates/fmt/: Cargo.toml  NOTICE.md
crates/fmt/src/: format.rs  lib.rs  line_length.rs  unparse.rs
crates/fmt/src/print/: attribute_value_node.rs  comment.rs  component.rs  control.rs  control_block.rs  element.rs  element_node.rs  expr.rs  mod.rs
crates/macros/: Cargo.toml  NOTICE.md
crates/macros/src/: action.rs  lib.rs  scoped_signal.rs  shared.rs
crates/macros/src/cheers/: form.rs  id.rs  mod.rs  prop.rs  signal.rs
crates/macros/src/component/: form.rs  id.rs  mod.rs  signal.rs
crates/macros/src/refs/: form.rs  id.rs  mod.rs  prop.rs  signal.rs
examples/component_testing/: Cargo.toml
examples/component_testing/src/: main.rs
examples/readme/: Cargo.toml
examples/readme/src/: main.rs
examples/realtime/: Cargo.toml
examples/realtime/src/: main.css  main.rs
maudfmt/: Cargo.toml
maudfmt/src/: line_length.rs  main.rs  unparse.rs
maudfmt/src/print/: attribute_value_node.rs  component.rs  control.rs  control_block.rs  element.rs  element_node.rs  expr.rs  lit.rs
maudfmt/tests/: cli.rs  rustfmt_arg.rs
typed_jinja/: Cargo.toml
typed_jinja/src/: lib.rs
typed_jinja/tests/: basic.rs
typed_jinja/tests/templates/: name_surname.html
(+83 files in other folders)
