[workspace]
members = ["crabstar", "crabstar_macros", "bundlestar"]
resolver = "3"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
askama = { path = "./askama/askama" }
axum = { version = "0.8" }
trybuild = { version = "1.0", features = ["diff"] }
syn = { version = "2" }
quote = { version = "1", default-features = false }
proc-macro2 = { version = "1", default-features = false }
tokio = { version = "1", features = [
  "macros",
  "sync",
], default-features = false }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = { version = "0.3" }
tower = { version = "0.5" }
notify = { version = "8" }
tower-http = { version = "0.6", features = ["compression-full"] }
lightningcss = { version = "1.0.0-alpha.68" }
base64.version = "0.22"
tracing = "0.1"
toml = { version = "0.9" }
ignore = { version = "0.4" }
nom = { version = "8" }
# minify-html = { version = "0.18.1" }

# Bundler
swc_common = { version = "17.0.1", features = ["tty-emitter"] }
swc_ecma_ast = { version = "18.0.0" }
swc_ecma_parser = { version = "27.0.7" }
swc_ecma_minifier = { version = "36.0.4" }
swc_ecma_codegen = { version = "20.0.2" }
swc_ecma_transforms_base = { version = "30.0.1" }
swc_bundler = { version = "35.0.0" }
swc_ecma_loader = { version = "17.0.0", features = ["node", "cache"] }
swc_ecma_transforms_typescript = "33.0.0"
swc_ecma_visit = "18.0.1"
swc_atoms = "9.0.0"
regex = "1.12.2"
anyhow = "1"
walkdir = "2"
path-clean = "1"

crabstar = { path = "./crabstar" }
crabstar_macros = { path = "./crabstar_macros" }
bundlestar = { path = "./bundlestar" }

[workspace.lints.clippy]
unwrap_used = "deny"
panic_in_result_fn = "deny"
