[workspace]
members = ["crates/*", "examples/*"]
resolver = "3"

[workspace.package]
version = "0.1.0-alpha.1"
authors = ["Mykyta Polchanov <nikirsmcgl@gmail.com>"]
edition = "2024"
rust-version = "1.88"
description = "Fullstack hypermedia framework"
readme = "README.md"
homepage = "https://github.com/myypo/cheers"
repository = "https://github.com/myypo/cheers"
license = "MIT"
keywords = ["hypermedia", "web", "data-star"]
categories = ["web-programming"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
axum = { version = "0.8" }
tower = { version = "0.5" }
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
quote = { version = "1", default-features = false }
proc-macro2 = { version = "1", default-features = false }
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "io-util",
], default-features = false }
itoa = { version = "1" }
zmij = { version = "1" }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = { version = "0.3" }
notify = { version = "8" }
lightningcss = { version = "1.0.0-alpha.71" }
base64.version = "0.22"
tracing = "0.1"
ignore = { version = "0.4" }
html-escape = { version = "0.2" }
percent-encoding = "2"
cssparser = "0.33"
headers = "0.4"
hmac = "0.12"
rustc-hash = { version = "2" }
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
crop = "0.4"
prettyplease = { version = "0.2", features = ["verbatim"] }
rustc_lexer = "0.1"
pretty_assertions = "1"
predicates = "3"
assert_fs = "1"
assert_cmd = "2"
inventory = "0.3"
async-compression = { version = "0.4", features = [
  "tokio",
  "gzip",
  "zstd",
  "brotli",
] }
tokio-util = { version = "0.7", features = ["io"] }
thirtyfour = { version = "0.37.1", features = ["rustls"] }
dioxus-devtools = { version = "0.7.6", default-features = false }

# Bundler
swc_common = { version = "17.0.1", features = ["tty-emitter"] }
swc_ecma_ast = { version = "18.0.0" }
swc_ecma_parser = { version = "27.0.7" }
swc_ecma_minifier = { version = "36.0.4" }
swc_ecma_codegen = { version = "20.0.2" }
swc_ecma_transforms_base = { version = "30.0.1" }
swc_bundler = { version = "35.0.0" }
swc_ecma_loader = { version = "17.0.0", features = ["node", "cache"] }
swc_ecma_transforms_typescript = "33.0.0"
swc_ecma_visit = "18.0.1"
anyhow = "1"
walkdir = "2"

# Workspace crates
bundle = { package = "cheers-bundle", path = "./crates/bundle", version = "=0.1.0-alpha.1" }
cheers = { path = "./crates/cheers", version = "=0.1.0-alpha.1" }
ast = { package = "cheers-ast", path = "./crates/ast", version = "=0.1.0-alpha.1" }
macros = { package = "cheers-macros", path = "./crates/macros", version = "=0.1.0-alpha.1" }
fmt = { package = "cheers-fmt", path = "./crates/fmt", version = "=0.1.0-alpha.1" }
cli = { package = "cargo-cheers", path = "./crates/cargo-cheers", version = "=0.1.0-alpha.1" }

[workspace.lints.clippy]
unwrap_used = "deny"
panic_in_result_fn = "deny"
undocumented_unsafe_blocks = "deny"

