[package]
name = "bundlestar"
version = "0.1.0"
edition = "2024"

[dependencies]
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_parser.workspace = true
swc_ecma_minifier.workspace = true
swc_ecma_codegen.workspace = true
swc_ecma_transforms_base.workspace = true
swc_bundler.workspace = true
swc_ecma_loader.workspace = true
swc_ecma_transforms_typescript.workspace = true
swc_ecma_visit.workspace = true
swc_atoms.workspace = true
regex.workspace = true
anyhow.workspace = true
path-clean.workspace = true

[build-dependencies]
walkdir.workspace = true

[lints]
workspace = true
