[package]
name = "crabstar"
version = "0.1.0"
edition = "2024"

[dependencies]
crabstar_macros.workspace = true
askama.workspace = true

serde.workspace = true
futures.workspace = true
tokio = { workspace = true }

[dev-dependencies]
trybuild.workspace = true
serde_json.workspace = true
tokio-stream = { workspace = true }
