[package]
name = "crabstar"
version = "0.1.0"
edition = "2024"

[dependencies]
crabstar_macros.workspace = true
bundlestar.workspace = true

askama.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower-http.workspace = true
axum = { workspace = true }
lightningcss = { workspace = true }
base64 = { workspace = true }
notify.workspace = true
ignore.workspace = true

tracing = { workspace = true, optional = true }

[dev-dependencies]
trybuild.workspace = true
tower = { workspace = true }
tokio = { workspace = true, features = ["time"] }

[features]
default = ["tracing"]
tracing = ["dep:tracing"]

[lints]
workspace = true
