[package]
name = "crabstar_macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
bundlestar.workspace = true

syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
serde.workspace = true
toml.workspace = true
regex.workspace = true

[lints]
workspace = true
