[package]
name = "crabstar_macros"
version = "0.1.0"
edition = "2024"

[dependencies]
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
syn = { version = "2", default-features = false, features = [
  "clone-impls",
  "derive",
  "parsing",
  "printing",
] }

[lints]
workspace = true
