[package]
name = "typed_jinja"
version = "0.1.0"
edition = "2024"

[dependencies]
minijinja.workspace = true
minijinja-autoreload.workspace = true
typed_jinja_macros.workspace = true
toml.workspace = true
serde.workspace = true

[dev-dependencies]
trybuild.workspace = true
askama.workspace = true

[features]
default = []
skip_dev_check = ["typed_jinja_macros/skip_dev_check"]
