[package]
name = "cheers-ast"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Internal AST support crate for cheers."
documentation = "https://docs.rs/cheers-ast"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
html-escape.workspace = true
proc-macro2 = { workspace = true, features = ["span-locations"] }
quote.workspace = true
syn.workspace = true
rustc-hash.workspace = true
base64.workspace = true

[lints]
workspace = true
