[package]
name = "bundle"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_parser.workspace = true
swc_ecma_minifier.workspace = true
swc_ecma_codegen.workspace = true
swc_ecma_transforms_base.workspace = true
swc_bundler.workspace = true
swc_ecma_loader.workspace = true
swc_ecma_transforms_typescript.workspace = true
swc_ecma_visit.workspace = true
anyhow.workspace = true

[build-dependencies]
walkdir.workspace = true
anyhow.workspace = true

[lints]
workspace = true
