[package]
name = "cheers-bundle"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Internal JavaScript and CSS bundling support crate for Cheers."
documentation = "https://docs.rs/cheers-bundle"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_parser.workspace = true
swc_ecma_minifier.workspace = true
swc_ecma_codegen.workspace = true
swc_ecma_transforms_base.workspace = true
swc_bundler.workspace = true
swc_ecma_loader.workspace = true
swc_ecma_transforms_typescript.workspace = true
swc_ecma_visit.workspace = true
anyhow.workspace = true

[build-dependencies]
walkdir.workspace = true
anyhow.workspace = true

[package.metadata.cargo-machete]
ignored = ["walkdir"]

[lints]
workspace = true
