[package]
name = "cheers"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Fullstack hypermedia framework for Rust."
documentation = "https://docs.rs/cheers"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
axum.workspace = true
html-escape.workspace = true
macros.workspace = true
itoa.workspace = true
zmij.workspace = true
futures.workspace = true
ignore.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
bundle.workspace = true
notify.workspace = true
lightningcss.workspace = true
base64.workspace = true
tracing.workspace = true
tower.workspace = true
serde.workspace = true
serde_json.workspace = true
inventory.workspace = true
async-compression.workspace = true
tokio-util.workspace = true
thirtyfour = { workspace = true, optional = true }

[dev-dependencies]
trybuild = "1"

[features]
test = ["dep:thirtyfour"]
mathml = []

[lints]
workspace = true
