[package]
name = "cheers"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Fullstack hypermedia framework for Rust."
documentation = "https://docs.rs/cheers"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo-machete]
ignored = ["walkdir"]

[dependencies]
axum = { workspace = true, features = ["ws"] }
html-escape.workspace = true
percent-encoding.workspace = true
cssparser.workspace = true
headers.workspace = true
hmac = { workspace = true, optional = true }
macros.workspace = true
itoa.workspace = true
zmij.workspace = true
futures.workspace = true
ignore.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
notify.workspace = true
lightningcss.workspace = true
base64.workspace = true
anyhow.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_parser.workspace = true
swc_ecma_minifier.workspace = true
swc_ecma_codegen.workspace = true
swc_ecma_transforms_base.workspace = true
swc_bundler.workspace = true
swc_ecma_loader.workspace = true
swc_ecma_transforms_typescript.workspace = true
swc_ecma_visit.workspace = true
tracing.workspace = true
tower.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = { workspace = true, optional = true }
inventory.workspace = true
async-compression.workspace = true
tokio-util.workspace = true
thirtyfour = { workspace = true, optional = true }
dioxus-devtools = { workspace = true, optional = true }

[build-dependencies]
anyhow.workspace = true
walkdir.workspace = true

[dev-dependencies]
trybuild = "1"

[features]
test = ["dep:thirtyfour"]
mathml = []
pi-extension = ["macros/pi-extension", "dep:hmac", "dep:sha2"]
subsecond = ["dep:dioxus-devtools"]

[lints]
workspace = true
