[package]
name = "fmt"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ast.workspace = true
anyhow.workspace = true
crop.workspace = true
proc-macro2.workspace = true
prettyplease.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
