[package]
name = "cheers-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Procedural macros for Cheers."
documentation = "https://docs.rs/cheers-macros"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
ast.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[features]
pi-extension = ["ast/pi-extension"]

[lints]
workspace = true
