[package]
name = "cheers-example-readme"
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
cheers.workspace = true
axum.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }
