[package]
name = "cheers-example-realtime"
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
cheers = { workspace = true, features = ["test"] }
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rand = "0.8"

[dev-dependencies]
thirtyfour.workspace = true
